--- a/app/views/councilTaxStart.scala.html
+++ b/app/views/councilTaxStart.scala.html
@@ -23,6 +23,8 @@
     appConfig = appConfig,
     bodyClasses = None) {
 
+    @components.service_info()
+
     @components.heading("councilTaxStart.heading")
 
     <p>@messages("councilTaxStart.paragraph")</p>
