--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -23,6 +23,8 @@
     appConfig = appConfig,
     bodyClasses = None) {
 
+    @components.service_info()
+
     @components.heading("welcome.heading")
 
     <h3 class="heading-medium">
