--- a/app/assets/stylesheets/partials/_typography.scss
+++ b/app/assets/stylesheets/partials/_typography.scss
@@ -35,3 +35,12 @@ p.font-xsmall{
 .hero__heading-small {
   display: block;
 }
+
+.breadcrumb-nav__item--trail-pipe {
+
+  &:after {
+    content: "|";
+    margin-left:.5em;
+    margin-right:.2em;
+  }
+}
